--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-google-maps/api": "^2.7.0",
     "@reduxjs/toolkit": "^1.6.0",
     "@storybook/storybook-deployer": "^2.8.10",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-places-autocomplete": "^3.3.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
