--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": ">=14.0.0 <15.0.0"
+    "node": ">=14.0.0 <16.13.2"
   },
   "scripts": {
+    "dev": "next dev",
+    "nextbuild": "next build",
+    "nextstart": "next start",
     "start": "NODE_ENV=development NODE_STAGE=dev webpack serve --config webpack.config.ts --open --hot",
     "build": "webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,6 +29,8 @@
     "@reduxjs/toolkit": "^1.6.0",
     "@storybook/storybook-deployer": "^2.8.10",
     "classnames": "^2.3.1",
+    "eslint": "^8.8.0",
+    "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-places-autocomplete": "^3.3.2",
