--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start": "NODE_ENV=development NODE_STAGE=dev webpack serve --config webpack.config.ts --open --hot",
     "build": "webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "start-storybook -p 6006 -s ./public",
+    "build-storybook": "build-storybook -s public",
     "deploy-storybook": "storybook-to-ghpages"
   },
   "repository": {
@@ -28,6 +28,7 @@
     "@react-google-maps/api": "^2.7.0",
     "@reduxjs/toolkit": "^1.6.0",
     "@storybook/storybook-deployer": "^2.8.10",
+    "babel-plugin-react-require": "^3.1.3",
     "classnames": "^2.3.1",
     "eslint": "^8.8.0",
     "next": "latest",
@@ -60,7 +61,7 @@
     "@types/redux-logger": "^3.0.8",
     "@types/redux-thunk": "^2.1.0",
     "@types/terser-webpack-plugin": "^5.0.3",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.3",
     "css-loader": "^5.2.6",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
