--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-google-maps/api": "^2.7.0",
     "@reduxjs/toolkit": "^1.6.0",
     "@storybook/storybook-deployer": "^2.8.10",
+    "axios": "^0.25.0",
     "babel-plugin-react-require": "^3.1.3",
     "classnames": "^2.3.1",
     "eslint": "^8.8.0",
